--- a/flaskapp/templates/data.html
+++ b/flaskapp/templates/data.html
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Data Table</title>
+    <title>Raw Data</title>
 </head>
 <body>
-    <h1> Data </h1>
+    <h1>Raw Data from MySQL database</h1>
+    <p>
+        <a href="data/categories">Show Categories table</a>
+    </p>
+    <p>
+        <a href="data/customers">Show Customers table</a>
+    </p>
+    <p>
+        <a href="data/geolocation">Show Geolocation table</a>
+    </p>
+    <p>
+        <a href="data/orderitems">Show Orderitems table</a>
+    </p>
+    <p>
+        <a href="data/orderpayments">Show Orderpayments table</a>
+    </p>
+    <p>
+        <a href="data/orders">Show Orders table</a>
+    </p>
+    <p>
+        <a href="data/products">Show Products table</a>
+    </p>
+    <p>
+        <a href="data/sellers">Show Sellers table</a>
+    </p>
+    <p>
+        <a href="data/reviews">Show Reviews table</a>
+    </p>
+
 </body>
 </html>
