--- a/flaskapp/templates/dashboard.html
+++ b/flaskapp/templates/dashboard.html
@@ -8,11 +8,21 @@
         align-items: center;
         justify-content: center;
     }
+    .image-container {
+
+        width:80%;
+        margin: 0 auto; /* Center horizontally */
+        padding: 15px;
+        border-radius: 10px; /* Adjust the border radius as needed */
+      overflow: hidden;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Adjust the shadow as needed */
+    }
     .image-container img {
         max-width: 100%; /* Ensure images don't exceed container width */
         height: auto; /* Maintain aspect ratio */
         display: block; /* Remove default inline display */
         margin: 0 auto; /* Center horizontally */
+
     }
 </style>
 <body>
